# crtl-b

./: .gitignore  Cargo.toml  README.md  makefile
extension/: makefile  package-lock.json  package.json  tsconfig.json  webpack.config.js
extension/src/: background.ts  content.ts  popup.ts
extension/src/background/: index.ts
extension/src/content/: box.tsx  index.tsx
extension/src/content/styles/: output.css
src/: lib.rs  ollama.rs
