[package]
name = "ctrl-b"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.197" , features = ["derive"] }
serde_json = "1.0.114"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.42"
